FIX: fixed z-index of span

--- a/cotown/src/app/time-chart/time-chart-control/time-chart-control.component.scss
+++ b/cotown/src/app/time-chart/time-chart-control/time-chart-control.component.scss
@@ -56,7 +56,7 @@
 }
 .timechart-row-lines span.marker {
 	background-color: rgba(10, 52, 68, 0.13);
-	z-index: 2;
+	z-index: 0;
 }
 .timechart-row-lines:after {
 	grid-row: 1;
